k8s/service-mesh/linkerd/linkerd-config.yaml
# Linkerd Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd
  labels:
    linkerd.io/control-plane-ns: linkerd
    config.linkerd.io/admission-webhooks: disabled
  annotations:
    linkerd.io/inject: disabled
---
# Linkerd Viz Extension for observability
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-viz
  labels:
    linkerd.io/extension: viz
  annotations:
    linkerd.io/inject: enabled
    config.linkerd.io/proxy-await: "enabled"
---
# Linkerd Multicluster Extension
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-multicluster
  labels:
    linkerd.io/extension: multicluster
  annotations:
    linkerd.io/inject: enabled
